scribble-test/src/test/resources/bad/safety/stuckmsg/payloads/Test01a.scr
module bad.safety.stuckmsg.payloads.Test01a;


type <java> "java.lang.Integer" from "rt.jar" as Int1;
type <java> "java.lang.Integer" from "rt.jar" as Int2;


global protocol Proto1(role A, role B)
{
	choice at A
	{
		//1() from A to B;  // Uncomment still bad
		1(Int1) from A to B;
		2() from B to A;
	}
	or
	{
		1(Int2) from A to B;  // here, payloads aren't considered as distinguishing for labels
		                      // error is the special case of actions that are non-deterministic labels up to payloads
		                      // (Syntactic MPST merge not defined for repeat labels, Cf. -oldwf)
		3() from B to A;
	}
}

